# aoc2025

./: .gitignore  README.md  aoc2025.cabal
.github/workflows/: build.yml  build_test.yml
lib/: Day01SecretEntrance.hs  Day02GiftShop.hs  Day03Lobby.hs  Day04PrintingDepartment.hs  Day05Cafeteria.hs  Day06TrashCompactor.hs  Day07Laboratories.hs  Day08Playground.hs  Days.hs
lib/Util/: UnionFind.hs
test/: ExampleSpec.hs  Main.hs  UtilSpec.hs
