cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
license:            MIT
author:             Mirko Westermeier
maintainer:         mirko@westermeier.de
build-type:         Simple

common basics
  default-language: GHC2021
  ghc-options:      -Wall
  build-depends:    base, data-default, ghc, mtl

library
  import:           basics
  exposed-modules:  Day01SecretEntrance
  hs-source-dirs:   lib
