cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
license:            MIT
author:             Mirko Westermeier
maintainer:         mirko@westermeier.de
build-type:         Simple

data-dir: test/data
data-files:
  *.in
  *.out

common basics
  default-language: GHC2021
  ghc-options:      -Wall
  build-depends:    base, data-default, ghc, mtl

library
  import:           basics
  exposed-modules:  Days
                  , Day01SecretEntrance
                  , Day02GiftShop
  hs-source-dirs:   lib

test-suite spec
  import:           basics
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:    aoc2025
                  , hspec
  other-modules:    Paths_aoc2025
  hs-source-dirs:   test
