cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
license:            MIT
author:             Mirko Westermeier
maintainer:         mirko@westermeier.de
build-type:         Simple

data-dir: test/data
data-files:
  *.in
  *.out

common basics
  default-language: GHC2021
  ghc-options:      -Wall
  build-depends:    base
                  , containers
                  , data-default
                  , ghc
                  , lens
                  , mtl

library
  import:           basics
  exposed-modules:  Days
                  , Day01SecretEntrance
                  , Day02GiftShop
                  , Day03Lobby
                  , Day04PrintingDepartment
                  , Day05Cafeteria
                  , Day06TrashCompactor
                  , Day07Laboratories
                  , Day08Playground
                  , Util.UnionFind
  hs-source-dirs:   lib

test-suite spec
  import:             basics
  type:               exitcode-stdio-1.0
  main-is:            run-all-tests.hs
  build-depends:      aoc2025
                    , hspec
                    , QuickCheck
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:      Paths_aoc2025
                    , ExampleSpec
                    , UtilSpec
  hs-source-dirs:     test
